# sql_rs

./: Cargo.toml
src/: backend.rs  entities.rs  main.rs  metacommand_processor.rs  sql_compiler.rs  virtual_machine.rs
src/backend/: columns.rs  cursor.rs  database.rs  db_cell.rs  journal.rs  page.rs  pager.rs  row.rs  table.rs
src/entities/: columns.rs  page.rs  row.rs  table.rs
src/sql_compiler/: common_parsers.rs  create.rs  insert.rs  select.rs  statement.rs
src/virtual_machine/: create.rs  insert.rs  select.rs  vm_error.rs
