[package]
name = "sql_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.*"
bincode = { version = "2.0.0-rc", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-big-array = "0.5.1"
