[package]
name = "sql_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc", features = ["serde"] }
dialoguer = { version = "0.11.0", features = ["history"] }
nom = "7.*"
serde = { version = "1.0.197", features = ["derive"] }
